@@ -54,6 +54,13 @@ class FileLocations(object):
     HOOKS_PLUGIN_HOOKS_DIR = 'hooks.d'
     HOOKS_PLUGIN_PACKAGES_DIR = 'packages.d'
 
+    OPENSTACK_NEUTRON_CONFIG = '/etc/quantum/quantum.conf'
+    OPENSTACK_NEUTRON_PLUGIN_CONFIG = '/etc/quantum/plugin.ini'
+    OPENSTACK_NEUTRON_LINUXBRIDGE_CONFIG = \
+        '/etc/quantum/plugins/linuxbridge/linuxbridge_conf.ini'
+    OPENSTACK_NEUTRON_OPENVSWITCH_CONFIG = \
+        '/etc/quantum/plugins/openvswitch/ovs_quantum_plugin.ini'
+
 
 @util.export
 class Defaults(object):
@@ -104,6 +111,19 @@ class VdsmEnv(object):
 @util.codegen
 class GlusterEnv(object):
     ENABLE = 'GLUSTER/enable'
+
+
+@util.export
+@util.codegen
+class OpenStackEnv(object):
+    NEUTRON_ENABLE = 'OPENSTACK/neutronEnable'
+    NEUTRON_CONFIG_PREFIX = 'OPENSTACK_NEUTRON_CONFIG/'
+    NEUTRON_LINUXBRIDGE_ENABLE = 'OPENSTACK/neutronLinuxBridgeEnable'
+    NEUTRON_LINUXBRIDGE_CONFIG_PREFIX = 'OPENSTACK_NEUTRON_LINUXBRIDGE_CONFIG/'
+    NEUTRON_OPENVSWITCH_ENABLE = 'OPENSTACK/neutronOpenvswitchEnable'
+    NEUTRON_OPENVSWITCH_INTERNAL_BRIDGE = \
+        'OPENSTACK/neutronOpenvswitchIntegrationBridge'
+    NEUTRON_OPENVSWITCH_CONFIG_PREFIX = 'OPENSTACK_NEUTRON_OPENVSWITCH_CONFIG/'
 
 
 @util.export
